@@ -325,6 +325,10 @@ class WC_Stripe_API {
 	 * @throws WC_Stripe_Exception
 	 */
 	public static function detach_payment_method_from_customer( string $customer_id, string $payment_method_id ) {
+		if ( ! self::should_detach_payment_method_from_customer() ) {
+			return [];
+		}
+
 		$payment_method_id = sanitize_text_field( $payment_method_id );
 
 		// Sources and Payment Methods need different API calls.
@@ -340,5 +344,37 @@ class WC_Stripe_API {
 			[],
 			'payment_methods/' . $payment_method_id . '/detach'
 		);
+	}
+
+	/**
+	 * Checks if a payment method should be detached from a customer.
+	 *
+	 * If the site is a staging/local/development site in live mode, we should not detach the payment method
+	 * from the customer to avoid detaching it from the production site.
+	 *
+	 * @return bool True if the payment should be detached, false otherwise.
+	 */
+	public static function should_detach_payment_method_from_customer() {
+		$options   = get_option( 'woocommerce_stripe_settings' );
+		$test_mode = isset( $options['testmode'] ) && 'yes' === $options['testmode'];
+
+		// If we are in test mode, we can always detach the payment method.
+		if ( $test_mode ) {
+			return true;
+		}
+
+		// Return true for the delete user request from the admin dashboard when the site is a production site
+		// and return false when the site is a staging/local/development site.
+		// This is to avoid detaching the payment method from the live production site.
+		// Requests coming from the customer account page i.e delete payment method, are not affected by this and returns true.
+		if ( is_admin() ) {
+			if ( 'production' === wp_get_environment_type() ) {
+				return true;
+			} else {
+				return false;
+			}
+		}
+
+		return true;
 	}
 }
