@@ -13,6 +13,7 @@
 * Fix - Catch request failure errors.
 * Tweak - Add test mode notice.
 * Fix - Remove ugx from the zero decimal currency list as a special case in Stripe.
+* Fix - Deleting customer on staging site detaches tokens from customer in Stripe.
 
 = 7.6.1 - 2023-10-17 =
 * Fix - Add nonce check to OAuth flow.
